--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -911,7 +911,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How to make money with Roamni" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3b-gH-WTG">
-                                                    <rect key="frame" x="87" y="8" width="261" height="29"/>
+                                                    <rect key="frame" x="87" y="8" width="300" height="29"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -945,7 +945,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Roamni" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6K-Tw-0tK">
-                                                    <rect key="frame" x="88" y="0.0" width="111" height="43"/>
+                                                    <rect key="frame" x="88" y="0.0" width="150" height="43"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -975,7 +975,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Incoming Tours" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AlZ-wo-Aan">
-                                                    <rect key="frame" x="91" y="8" width="255" height="32"/>
+                                                    <rect key="frame" x="91" y="8" width="294" height="32"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -1009,7 +1009,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wat-AS-yQO">
-                                                    <rect key="frame" x="0.0" y="-2" width="336" height="47"/>
+                                                    <rect key="frame" x="0.0" y="-2" width="375" height="47"/>
                                                     <state key="normal" title="Login with Facebook"/>
                                                     <connections>
                                                         <segue destination="VQT-zN-kv0" kind="show" id="jPL-SG-8VL"/>
@@ -1203,15 +1203,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tTz-N2-Uqw">
-                                <rect key="frame" x="0.0" y="565" width="375" height="30"/>
-                                <state key="normal" title="Submit"/>
-                                <connections>
-                                    <action selector="submitRequest:" destination="onh-Dh-ZeU" eventType="touchUpInside" id="OaI-cL-v9q"/>
-                                </connections>
-                            </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GZj-cM-3em">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <subviews>
                                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oTo-IV-lvV">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="246"/>
@@ -1264,7 +1257,7 @@
                                         </variation>
                                     </label>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4nK-NX-Dd7">
-                                        <rect key="frame" x="138" y="231" width="190" height="109"/>
+                                        <rect key="frame" x="138" y="254" width="190" height="86"/>
                                     </pickerView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D5U-uf-Kl7">
                                         <rect key="frame" x="8" y="391" width="106" height="20"/>
@@ -1273,10 +1266,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Six-2A-k3Z">
-                                        <rect key="frame" x="143" y="391" width="185" height="154"/>
+                                        <rect key="frame" x="143" y="391" width="185" height="104"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="154" id="ABN-Lx-t55"/>
+                                            <constraint firstAttribute="height" constant="104" id="ABN-Lx-t55"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -1291,6 +1284,14 @@
                                             </mask>
                                         </variation>
                                     </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yne-8N-gEd">
+                                        <rect key="frame" x="0.0" y="524" width="375" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Submit"/>
+                                        <connections>
+                                            <action selector="submitRequest:" destination="onh-Dh-ZeU" eventType="touchUpInside" id="b6f-9f-FWU"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="Six-2A-k3Z" firstAttribute="top" secondItem="I4e-Qs-FNF" secondAttribute="bottom" constant="13" id="0dr-N4-Lpd"/>
@@ -1307,10 +1308,12 @@
                                     <constraint firstItem="XBd-9C-sGL" firstAttribute="top" secondItem="oTo-IV-lvV" secondAttribute="bottom" constant="29" id="WgR-GY-pfP"/>
                                     <constraint firstItem="4nK-NX-Dd7" firstAttribute="leading" secondItem="I4e-Qs-FNF" secondAttribute="leading" id="XKy-cE-Ymx"/>
                                     <constraint firstItem="4nK-NX-Dd7" firstAttribute="trailing" secondItem="I4e-Qs-FNF" secondAttribute="trailing" id="XrG-ol-EhZ"/>
-                                    <constraint firstItem="XBd-9C-sGL" firstAttribute="centerY" secondItem="4nK-NX-Dd7" secondAttribute="centerY" id="YHQ-jY-13X"/>
+                                    <constraint firstItem="XBd-9C-sGL" firstAttribute="centerY" secondItem="4nK-NX-Dd7" secondAttribute="centerY" id="YHQ-jY-13X">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="-11.5"/>
+                                    </constraint>
                                     <constraint firstItem="Lqc-IN-tRS" firstAttribute="trailing" secondItem="D5U-uf-Kl7" secondAttribute="trailing" id="YKs-fp-MBm"/>
                                     <constraint firstAttribute="trailing" secondItem="oTo-IV-lvV" secondAttribute="trailing" id="fz3-zb-wX3"/>
-                                    <constraint firstAttribute="bottom" secondItem="Six-2A-k3Z" secondAttribute="bottom" constant="78" id="k2p-At-Rg5"/>
+                                    <constraint firstAttribute="bottom" secondItem="Six-2A-k3Z" secondAttribute="bottom" constant="59" id="k2p-At-Rg5"/>
                                     <constraint firstItem="XBd-9C-sGL" firstAttribute="leading" secondItem="Lqc-IN-tRS" secondAttribute="leading" id="kdD-jN-5te"/>
                                     <constraint firstItem="D5U-uf-Kl7" firstAttribute="top" secondItem="Six-2A-k3Z" secondAttribute="top" id="keF-pF-hhO"/>
                                     <constraint firstItem="D5U-uf-Kl7" firstAttribute="top" secondItem="Lqc-IN-tRS" secondAttribute="bottom" constant="17" id="lPz-G5-5wy"/>
@@ -1378,37 +1381,25 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="mpK-td-gWi" firstAttribute="top" secondItem="tTz-N2-Uqw" secondAttribute="bottom" constant="23" id="AkA-p8-Kok"/>
                             <constraint firstItem="GZj-cM-3em" firstAttribute="bottom" secondItem="mpK-td-gWi" secondAttribute="top" id="CGT-qE-Y0m"/>
-                            <constraint firstItem="GZj-cM-3em" firstAttribute="trailing" secondItem="tTz-N2-Uqw" secondAttribute="trailing" id="D9U-0c-gUI"/>
-                            <constraint firstItem="tTz-N2-Uqw" firstAttribute="top" secondItem="8cy-dj-v78" secondAttribute="bottom" constant="562" id="MgH-Ep-5LI"/>
                             <constraint firstAttribute="trailing" secondItem="GZj-cM-3em" secondAttribute="trailing" id="ZiE-pw-GdN"/>
-                            <constraint firstItem="GZj-cM-3em" firstAttribute="top" secondItem="8cy-dj-v78" secondAttribute="bottom" id="eBR-l6-PNo"/>
-                            <constraint firstItem="GZj-cM-3em" firstAttribute="leading" secondItem="tTz-N2-Uqw" secondAttribute="leading" id="eZa-wv-zYs"/>
+                            <constraint firstItem="GZj-cM-3em" firstAttribute="top" secondItem="8cy-dj-v78" secondAttribute="bottom" constant="-64" id="eBR-l6-PNo"/>
                             <constraint firstItem="GZj-cM-3em" firstAttribute="leading" secondItem="coy-4T-wGH" secondAttribute="leading" id="mz0-HN-psF"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="CGT-qE-Y0m"/>
-                                <exclude reference="D9U-0c-gUI"/>
                                 <exclude reference="ZiE-pw-GdN"/>
                                 <exclude reference="eBR-l6-PNo"/>
-                                <exclude reference="eZa-wv-zYs"/>
                                 <exclude reference="mz0-HN-psF"/>
-                                <exclude reference="MgH-Ep-5LI"/>
-                                <exclude reference="AkA-p8-Kok"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="constraints">
                                 <include reference="CGT-qE-Y0m"/>
-                                <include reference="D9U-0c-gUI"/>
                                 <include reference="ZiE-pw-GdN"/>
                                 <include reference="eBR-l6-PNo"/>
-                                <include reference="eZa-wv-zYs"/>
                                 <include reference="mz0-HN-psF"/>
-                                <exclude reference="MgH-Ep-5LI"/>
-                                <include reference="AkA-p8-Kok"/>
                             </mask>
                         </variation>
                     </view>
@@ -1429,7 +1420,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lT7-rp-yky" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7342.0289855072469" y="-3027.717391304348"/>
+            <point key="canvasLocation" x="7341.6000000000004" y="-3028.3358320839584"/>
         </scene>
         <!--My Tour Table View Controller-->
         <scene sceneID="b9h-hq-c87">
